# handelaar_ai_orchestrator

./: .gitignore  .pre-commit-config.yaml  README.md  cpp_core.pyi  generate_mock_data.py  requirements.txt
benchmarks/: run_latency_test.py
cpp_core/: CMakeLists.txt
cpp_core/include/: lob_engine.h  risk_guard.h  spsc_queue.h
cpp_core/src/: bindings.cpp  lob_engine.cpp  risk_guard.cpp
python_slow_loop/: main_loop.py
python_slow_loop/agents/: llm_classifier.py  rl_jax_agent.py
python_slow_loop/orchestrator/: arbiter.py
scripts/: post_trade_analytics.py
tests/: test_cpp_guardrails.py  test_jax_rl.py  test_orchestrator.py
